# field_journal

./: .gitignore  ATTRIBUTION.md  CLAUDE.md  Makefile  README.md  manifest.json  pyproject.toml
journal/20260201/field.audio/070100_17/: stream.json
journal/20260201/field.audio/070200_17/: stream.json
journal/streams/: field.audio.json  field.screen.json
reference/ami/ES2002a/: speakers.json  transcript.txt
reference/ami/ES2005a/: speakers.json  transcript.txt
reference/chime6/S01/: speakers.json  transcript.txt
reference/chime6/S21/: speakers.json  transcript.txt
reference/dipco/S01/: speakers.json  transcript.txt
reference/dipco/S02/: speakers.json  transcript.txt
reference/dipco/S03/: speakers.json  transcript.txt
reference/dipco/S04/: speakers.json  transcript.txt
reference/dipco/S05/: speakers.json  transcript.txt
reference/dipco/S06/: speakers.json  transcript.txt
reference/icsi/Bmr005/: speakers.json  transcript.txt
reference/icsi/Bmr006/: speakers.json  transcript.txt
reference/icsi/Bmr007/: speakers.json  transcript.txt
reference/voxconverse/cjfer/: speakers.json
reference/voxconverse/czlvt/: speakers.json
reference/voxconverse/kdfqk/: speakers.json
reference/voxconverse/ldnro/: speakers.json
reference/voxconverse/vmaiq/: speakers.json
reference/voxconverse/xxwgv/: speakers.json
tests/: test_journal.py  test_make_config.py  test_manifest.py
tools/: Makefile  build.py  make_config.py
tools/sources/: __init__.py  ami.py  chime6.py  dipco.py  hpr.py  icsi.py  loc.py  nasa.py  psai.py  voices.py  voxconverse.py
(+93 files in other folders)
